[gd_scene load_steps=5 format=3 uid="uid://dnqtrjfw7vr01"]

[ext_resource type="Script" path="res://src/scenes/scene_levels_list/levels_listLevel.gd" id="1_uqvhk"]
[ext_resource type="Texture2D" uid="uid://b2ohkw0i20y78" path="res://assets/images/platformer.webp" id="2_ic1qc"]
[ext_resource type="Script" path="res://src/scenes/scene_levels_list/level_list_VBox.gd" id="2_idvf3"]
[ext_resource type="AudioStream" uid="uid://bikkxqt1epbam" path="res://assets/sounds/Door-Bell-Ding-A1-www.fesliyanstudios.com.wav" id="3_33xyk"]

[node name="LevelsList" type="CanvasLayer"]
script = ExtResource("1_uqvhk")
next_name = "menu"
level_name = "level_list"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.662745, 0, 0, 0.294118)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
script = ExtResource("2_idvf3")

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Level List
"
uppercase = true

[node name="TextureRect" type="TextureRect" parent="CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_ic1qc")
expand_mode = 4

[node name="Label2" type="Label" parent="."]
offset_left = 359.0
offset_top = 63.0
offset_right = 440.0
offset_bottom = 86.0
text = "Level List
"
uppercase = true

[node name="ChangeSceneButton" type="Button" parent="."]
offset_left = 459.0
offset_top = 61.0
offset_right = 540.0
offset_bottom = 92.0
disabled = true
text = "Scene"

[node name="ClickButton" type="Button" parent="."]
offset_left = 267.0
offset_top = 63.0
offset_right = 348.0
offset_bottom = 94.0
text = "Cl!"

[node name="ButtonClickedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_33xyk")

[node name="LevelLoadedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_33xyk")

[node name="ClickLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -139.0
offset_right = -53.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 2
text = "Clicks: 0"
uppercase = true

[connection signal="pressed" from="ChangeSceneButton" to="." method="_on_ChangeSceneButton_pressed"]
[connection signal="pressed" from="ClickButton" to="." method="_on_ClickButton_pressed"]
